Replace image for Thai Chicken Thigh recipe

--- a/recipes/thaichickenthigh.html
+++ b/recipes/thaichickenthigh.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Thai Chicken Thigh Bake</h1>
 
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6491046.jpg" alt="Thai Chicken Thigh Dish">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9142210.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="Thai Chicken Thigh Dish">
 
     <h2>Super moist and super easy Thai-inspired sweet and spicy chicken. The secret is the foil wrapper!</h2>
 
