--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <a href="recipes/thaichickenthigh.html">Thai Chicken Thigh Bake</a>
     <a href="recipes/cookies.html">Best Chocolate Chip Cookies</a>
-
+    <a href="recipes/couscous.html">Couscous with Mushrooms and Sun-Dried Tomatoes</a>
+    <a href="recipes/crepes.html">Basic Crepes</a>
 </body>
 </html>
