--- a/recipes/couscous.html
+++ b/recipes/couscous.html
@@ -10,7 +10,7 @@
     <h1>Couscous with Mushrooms and Sun-Dried Tomatoes</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9444931.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="Couscous with Mushrooms and Sun-Dried Tomatoes">
 
-    <h2>Livelysun-dried tomatoes and hearty portobello mushrooms are tossed with couscous in this satisfying entree.</h2>
+    <h2>Lively sun-dried tomatoes and hearty portobello mushrooms are tossed with couscous in this satisfying entree.</h2>
 
     <h3>Ingredients</h3>
     <p><ul>
